<resources>
    <string name="app_name">准到</string>
    <string name="tab_test">ZhunDao</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="tab_act">活动</string>
    <string name="tab_sig">签到</string>
    <string name="tab_find">发现</string>
    <string name="tab_min">我</string>
    <string name="tv_status_defalut">未认证</string>
    <string name="tv_create_act">我发布的活动</string>
    <string name="tv_join_act">我参与的活动</string>
    <string name="tv_create_sign">我发起的签到</string>
    <string name="tv_myaddressbook">我的通讯录</string>
    <string name="tv_my_wallet">我的钱包</string>
    <string name="tv_sign_device">签到设备</string>
    <string name="tv_about_us">关于我们</string>
    <string name="tv_feedback">意见反馈</string>
    <string name="tv_setting">设置</string>
    <string name="tv_setting_password">准到密码</string>
    <string name="tv_setting_feedback">意见反馈</string>
    <string name="tv_setting_about_us">关于准到</string>
    <string name="tv_setting_version">版本升级</string>
    <string name="tv_setting_inf">通知公告</string>
    <string name="tv_setting_net">线路切换：&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;默认线路</string>
    <string name="tv_setting_net_1">线路切换：&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备用线路</string>
    <string name="tv_setting_exit">退出登录</string>
    <string name="menu_search">查找</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="menu_add_action">发起活动</string>
    <string name="menu_add_signup">发起签到</string>
    <string name="menu_act_share_friend">分享</string>
    <string name="menu_add_share_friendcircle">分享到朋友圈</string>
    <string name="menu_find_add_custom">添加自定义选项</string>
    <string name="menu_beacon_add">扫码绑定设备</string>
    <string name="menu_upload_multi">数据同步</string>
    <string name="menu_sign_delete">删除签到</string>
    <string name="menu_sign_show">微信签到二维码</string>
    <string name="menu_contacts_add">新建联系人</string>
    <string name="menu_contacts_group">分组</string>
    <string name="menu_group_add">新建群组</string>
    <string name="menu_people_edit">编辑联系人</string>
    <string name="menu_people_delete">删除联系人</string>
    <string name="menu_signlist_add">新增报名</string>
    <string name="menu_signlist_email">发送到邮件</string>
    <string name="menu_signlist_upload">更新数据</string>
    <string name="menu_signlist_user_delete">删除报名</string>
    <string name="menu_signlist_user_edit">修改报名信息</string>
    <string name="menu_signlist_more">扩展列表</string>
    <string name="menu_beacon_delete">删除设备</string>
    <string name="menu_sign_list_scan">扫码签到</string>
    <string name="app_serviceError">请联网后再试</string>
    <string name="app_serviceReturnrRigth">服务器正常</string>
    <string name="net_error">请联网后再试</string>
    <string name="app_dialog_Login_success">登录成功</string>
    <string name="app_dialog_title">系统提示</string>
    <string name="app_dialog_ok">确定</string>
    <string name="app_dialog_cancel">取消</string>
    <string name="app_updateApp_title">版本升级</string>
    <string name="app_updateApp_message">发现最新版本，请及时升级！</string>
    <string name="app_updateApp_success">下载成功，点击安装！</string>
    <string name="app_updateApp_error">下载失败！请稍后重试。</string>
    <string name="dialog_feedback">您有任何问题欢迎添加“准到”微信服务号或者添加微信号“izhundao”进行反馈，我们会及时给您回复！</string>
    <string name="progress_login_title">正在登录中...</string>
    <string name="progress_title">正在处理中...</string>
    <string name="progress_message">请稍后...</string>
    <string name="et_phone">手机：</string>
    <string name="et_password">密码：</string>
    <string name="tv_login_wechat">微信登录</string>
    <string name="btn_login">登录</string>
    <string name="et_sign_id">签到ID：</string>
    <string name="tv_multi_introduce">什么是多点签到？</string>
    <string name="tv_sign_title">签到标题</string>
    <string name="tv_sign_name">签到人：小明</string>
    <string name="tv_sign_support">技术支持：准到科技</string>
    <string name="tv_sign_status">等待签到</string>
    <string name="tv_sign_vcode">报名凭证</string>
    <string name="btn_find_custon">自定义报名项</string>
    <string name="tv_find_shake">准到Beacon</string>
    <string name="tv_find_multipoint">多点签到</string>
    <string name="tv_find_print">打印设置</string>
    <string name="tv_custom_title">111111111111111111111111111111111111111111111111</string>
    <string name="tv_custom_type">[类型]</string>
    <string name="tv_custom_required">是否必填</string>
    <string name="et_find_custom_name">请输入自定义项目名称</string>
    <string name="tv_find_custom_name">名称</string>
    <string name="tv_find_custom_type">类型</string>
    <string name="tv_find_custom_required">必填</string>
    <string name="tv_find_custom_add">添加</string>
    <string name="tv_find_custom_add_edit">修改后可能对已经发布的活动产生影响!</string>
    <string name="tv_find_custom_option">选项</string>
    <string name="et_find_custom_option">请输入选项,每个选项中间以英文|符号隔开，如北京|上海|广州</string>
    <string name="btn_find_custom_submit">提交</string>
    <string name="btn_find_beacon_delete">解除绑定</string>
    <string name="btn_find_multi_sign">扫码</string>
    <string name="btn_act_edit">签到</string>
    <string name="btn_act_list">名单</string>
    <string name="btn_act_share">分享</string>
    <string name="btn_act_more">更多</string>
    <string name="tv_act_title">嘻游记晚宴-“追忆古惑仔那些年”</string>
    <string name="tv_act_status">活动状态</string>
    <string name="tv_act_sign_num">报名人数：</string>
    <string name="num0">0</string>
    <string name="money0">0.00</string>
    <string name="tv_act_sign_income">收入：</string>
    <string name="tv_act_endtime">2016-12-1 15:00</string>
    <string name="tv_act_resttime">(剩余X天)</string>
    <string name="tv_acton">报名中的活动</string>
    <string name="tv_actoff">已截止的活动</string>
    <string name="et_signlist_search">姓名/昵称/手机号</string>
    <string name="et_contacts_search">姓名/手机号</string>
    <string name="et_signuplist_search">姓名/手机号</string>
    <string name="tv_actoff_suggest">暂无活动数据,请点击右上角发起新的活动~</string>
    <string name="tv_acton_suggest">暂无活动数据,请点击右上角发起新的活动~</string>
    <string name="tv_signon_suggest">暂无签到数据,请点击右上角发起新的签到~</string>
    <string name="tv_signoff_suggest">暂无签到数据,请点击右上角发起新的签到~</string>
    <string name="tv_action_sign_suggest">暂无该活动签到数据,请在主界面点击右上角发起新的签到~</string>
    <string name="tv_shake_suggest">请添加微信号”izhundao“\n发送“Beacon”关键词了解更多</string>
    <string name="tv_custom_suggest">如果系统默认报名选项不够,\n请点击右上角添加更多选项~</string>
    <string name="tv_group_suggest">当前分组没有联系人，请点击右上角添加联系人~</string>
    <string name="tv_start_act">发起活动</string>
    <string name="tv_details">活动详情</string>
    <string name="tv_custom">自定义选项</string>
    <string name="tv_edit_title">活动名称</string>
    <string name="tv_edit_time">活动名称</string>
    <string name="tv_edit_stoptime">活动名称</string>
    <string name="et_edit_title">请输入活动名称</string>
    <string name="tv_starttime_title">活动时间</string>
    <string name="tv_stoptime_title">报名截止</string>
    <string name="tv_edit_add">活动地点</string>
    <string name="tv_edit_details">活动详情</string>
    <string name="et_edit_add">请输入活动地点</string>
    <string name="tv_edit_moere">更多选项</string>
    <string name="btn_edit_submit">发布</string>
    <string name="app_dialog_sumbit_success">发布成功</string>
    <string name="app_dialog_sumbit_failed">发布失败，请检查网络，稍后再试</string>
    <string name="name">姓名</string>
    <string name="phone">手机</string>
    <string name="sex">性别</string>
    <string name="unit">单位</string>
    <string name="dep">部门</string>
    <string name="duty">职务</string>
    <string name="industry">行业</string>
    <string name="email">邮箱</string>
    <string name="join_num">参与人数</string>
    <string name="id_card">身份证</string>
    <string name="add">地址</string>
    <string name="remark">备注</string>
    <string name="face">人脸照片</string>
    <string name="none">暂无</string>
    <string name="pay_inf">付款信息:</string>
    <string name="SerialNo">编号</string>
    <string name="IconUrl">图标</string>
    <string name="beacon_name">设备名称</string>
    <string name="beacon_id">ZDID</string>
    <string name="device_id">WXID</string>
    <string name="add_time">购买时间</string>
    <string name="nickname">绑定功能</string>
    <string name="action">活动</string>
    <string name="sign">签到</string>
    <string name="select">选择类别</string>
    <string name="signup">报名</string>
    <string name="submit">提交</string>
    <string name="see">浏览</string>
    <string name="income">收入</string>
    <string name="tv_sign_type">到场签到：</string>
    <string name="tv_act_name">所属活动</string>
    <string name="tv_sign_stoptime">2016/12/19 17:55</string>
    <string name="tv_sign_user">全部：</string>
    <string name="tv_sign_signup">签到/报名</string>
    <string name="tv_sign">50</string>
    <string name="tv_sign_">/</string>
    <string name="tv_signup">50</string>
    <string name="tv_signon">进行中的签到</string>
    <string name="tv_signoff">已结束的签到</string>
    <string name="tv_signup_all">全部</string>
    <string name="tv_signup_on">已签</string>
    <string name="tv_signup_off">未签</string>
    <string name="tv_sign_scan">扫码签到</string>
    <string name="tv_sign_phone">手机号签到</string>
    <string name="btn_sign_signup">管理员代签</string>
    <string name="tv_sign_add_name">签到名称</string>
    <string name="tv_sign_add_type">签到类型</string>
    <string name="tv_sign_add_object">签到对象</string>
    <string name="tv_sign_add_actname">活动名称</string>
    <string name="tv_sign_edit">修改签到</string>
    <string name="tv_sign_delete">删除签到</string>
    <string name="tv_sign_qcode">签到二维码</string>
    <string name="tv_sign_email">发送到邮箱</string>
    <string name="et_sign_add_name">请输入签到的名称</string>
    <string name="et_sign_scan">请输入代签的手机号</string>
    <string name="camera_take_photo">拍照</string>
    <string name="camera_pick_photo">从相册选择</string>
    <string name="camera_cancel">取消</string>
    <string name="camera_photo_compression_image">图片压缩失败！</string>
    <string name="camera_photo_delete_image">确定删除该图片吗？</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="app_sdcardnotexist">SD卡不存在或者写保护！</string>
    <string name="zxing_qrcode_name">扫描二维码</string>
    <string name="zxing_qrcode_return">返回</string>
    <string name="zxing_scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="zxing_qrcode_failed">二维码扫描失败！</string>
    <string name="et_phone_bond">手机号:</string>
    <string name="et_code">验证码:</string>
    <string name="btn_sent_code">发送验证码</string>
    <string name="btn_bond_phone">绑定手机并登录</string>
    <string name="tv_acttitle_details">活动详情</string>
    <string name="tv_acttitle_beacon_list">准到Beacon</string>
    <string name="tv_acttitle_multi_point">多点签到</string>
    <string name="et_people_add_phone">请输入联系人的手机号码</string>
    <string name="et_people_add_name">请输入联系人的姓名</string>
    <string name="et_people_add_unit">请输入联系人的单位</string>
    <string name="et_people_add_add">请输入联系人的地址</string>
    <string name="et_people_add_duty">请输入联系人的职务</string>
    <string name="et_people_add_IDcard">请输入联系人的身份证号</string>
    <string name="et_people_add_SerialNo">请输入联系人的编号</string>
    <string name="et_people_add_email">请输入联系人的邮箱</string>
    <string name="tv_bluetooth">打印设备选择</string>
    <string name="tv_print">开启打印</string>
    <string name="print_test">打印测试</string>
    <string name="tv_size">尺寸</string>
    <string name="tv_model">模板</string>
    <string name="tv_type">触发模式</string>
    <string name="tv_xy">打印坐标位置调整</string>
    <string name="et_x">水平：默认0</string>
    <string name="et_y">垂直：默认0</string>
</resources>