<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_sign_edit"
        android:clickable="true"
        style="@style/list_txt_Style"
        android:text="@string/tv_sign_edit" />
    <include layout="@layout/line"/>
    <TextView
        android:layout_marginLeft="10dp"

        android:id="@+id/tv_sign_delete"
        android:clickable="true"
        style="@style/list_txt_Style"
        android:text="@string/tv_sign_delete" />
    <include layout="@layout/line"/>

    <TextView
        android:layout_marginLeft="10dp"

        android:id="@+id/tv_sign_qcode"
        android:clickable="true"
        style="@style/list_txt_Style"
        android:text="@string/tv_sign_qcode" />
    <include layout="@layout/line"/>
    <TextView
        android:layout_marginLeft="10dp"

        android:id="@+id/tv_sign_email"
        android:clickable="true"
        style="@style/list_txt_Style"
        android:text="@string/tv_sign_email" />


</LinearLayout>
