<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhaohe.zhundao.ui.home.sign.SignEditActivity">

    <TextView
        android:id="@+id/tv_sign_add_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_sign_add_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_sign_add_name2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_sign_add_name2"
        android:layout_toRightOf="@id/tv_sign_add_name2"
        android:hint="@string/et_sign_add_name" />

    <TextView
        android:id="@+id/tv_sign_add_type2"
        android:layout_below="@id/tv_sign_add_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_sign_add_type"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_sign_add_type2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_sign_add_type2"
        android:entries="@array/sign_add_type"
        android:layout_below="@id/tv_sign_add_name2"
        android:layout_marginTop="10dp"

        ></Spinner>

    <TextView
        android:id="@+id/tv_sign_add_object2"
        android:layout_below="@id/tv_sign_add_type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_sign_add_object"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_sign_add_object2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_sign_add_object2"
        android:entries="@array/sign_add_object"
        android:layout_below="@id/tv_sign_add_type2"
        android:layout_marginTop="10dp"

        ></Spinner>

    <TextView
        android:id="@+id/tv_sign_add_actname3"
        android:layout_below="@id/tv_sign_add_object2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_sign_add_actname"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_sign_add_actname4"
        android:layout_below="@id/tv_sign_add_object2"
        android:maxLines="1"
        android:layout_toRightOf="@id/tv_sign_add_actname3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_sign_add_actname"
        android:textSize="18sp" />

    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/btn_sign_add2"
        android:text="@string/ok"
        android:layout_below="@id/tv_sign_add_object2"
        style="@style/btn_login" />
</RelativeLayout>